--- a/src/tests/unit/Makefrag.am
+++ b/src/tests/unit/Makefrag.am
@@ -14,9 +14,8 @@ check_bin_unit_LDADD = \
   $(end)
 $(check_bin_unit_OBJECTS): AM_CPPFLAGS+=$(AND_CHECK_CPPFLAGS_SET)
 $(check_bin_unit_OBJECTS): AM_CXXFLAGS+=$(AND_CHECK_CXXFLAGS_SET) -Wno-deprecated-declarations
-$(check_bin_unit_OBJECTS): AM_LDFLAGS+=$(AND_CHECK_LDFLAGS_SET)
 # reminder: autotools does not put $(AM_LDFLAGS) into check_bin_unit_LDFLAGS, like it does with CPPFLAGS and CXXFLAGS
-check_bin_unit_LDFLAGS = $(AM_LDFLAGS)
+check_bin_unit_LDFLAGS = $(CHECK_LDFLAGS_SET)
 check_bin_unit_MODULES = $(call TF_SOURCEStoMODULES, $(check_bin_unit_SOURCES))
 check_bin_unit_SOURCES = \
   obj/src/tunitas/base64/Encoder.test.Access.cpp \
@@ -55,6 +54,8 @@ check_bin_unit_SOURCES = \
   obj/src/tests/unit/base64/Roundtrip.cpp \
   obj/src/tests/unit/base64/Encode.cpp \
   obj/src/tests/unit/base64/Decode.cpp \
+  obj/src/tests/unit/base64/printable.cpp \
+  obj/src/tests/unit/base64/printability.Formatter.cpp \
   obj/src/tests/unit/base64/decoder/namespace.cpp \
   obj/src/tests/unit/base64/decoder/Fixture.cpp \
   obj/src/tests/unit/base64/encoder/namespace.cpp \
