--- a/src/tunitas/Makefrag.am
+++ b/src/tunitas/Makefrag.am
@@ -83,9 +83,13 @@ lib_libtunitas_la_SOURCES = \
   \
   obj/src/tunitas/time/namespace.cpp \
   obj/src/tunitas/time/Clock.cpp \
+  obj/src/tunitas/time/duration.cpp \
+  obj/src/tunitas/time/duration_cast.cpp \
   obj/src/tunitas/time/Duration.cpp \
+  obj/src/tunitas/time/literals.cpp \
   obj/src/tunitas/time/Point.cpp \
   obj/src/tunitas/time/put.cpp \
+  obj/src/tunitas/time/ratio.cpp \
   \
   obj/src/tunitas/urlsafe/namespace.cpp \
   obj/src/tunitas/urlsafe/detail.cpp \
