and the rest of them (commit -a) for time literals and durations second .. year
Makefile.am: removed the <strike>gratuitous</strike> inappropriate OBJECTS MODULES dependencies which forced a complete rebuild every time
duration_cast
duration Second .. Year
ratio Second .. Year
src/tunitas/outcome/Success.xcpp: SUCCESS is a constant so it is only available at <hpp>
src/tunitas/Success.xcpp: ibidem.

--- a/src/tests/unit/Makefrag.am
+++ b/src/tests/unit/Makefrag.am
@@ -70,6 +70,9 @@ check_bin_unit_SOURCES = \
   obj/src/tests/unit/server.Fixture.cpp \
   obj/src/tests/unit/server.Fixture.exception.Example.cpp \
   obj/src/tests/unit/time.Fixture.cpp \
+  obj/src/tests/unit/time.literals.Fixture.cpp \
+  obj/src/tests/unit/time.duration.Fixture.cpp \
+  obj/src/tests/unit/time.ratio.Fixture.cpp \
   obj/src/tests/unit/tunitas.Fixture.cpp \
   obj/src/tests/unit/urlsafe.Fixture.cpp \
   obj/src/tests/unit/want.Fixture.cpp \
