--- a/src/tunitas/Makefrag.am
+++ b/src/tunitas/Makefrag.am
@@ -21,9 +21,9 @@
 #       <= 0     if any interfaces were changed
 #       <= AGE   if no interface change, but any other (source code) change
 #
-lib_libtunitas_la_CURRENT = 12
+lib_libtunitas_la_CURRENT = 13
 lib_libtunitas_la_REVISION = 0
-lib_libtunitas_la_AGE = 1
+glib_libtunitas_la_AGE = 2
 lib_libtunitas_la_CRA = $(lib_libtunitas_la_CURRENT):$(lib_libtunitas_la_REVISION):$(lib_libtunitas_la_AGE)
 
 lib_libtunitas_la = lib/libtunitas.la
@@ -68,7 +68,6 @@ lib_libtunitas_la_SOURCES = \
   obj/src/tunitas/base64/sized.ByType.cpp \
   obj/src/tunitas/base64/sized.ByValue.cpp \
   \
-  obj/src/tunitas/Success.cpp \
   obj/src/tunitas/Outcome.cpp \
   obj/src/tunitas/Success.cpp \
   obj/src/tunitas/outcome/namespace.cpp \
@@ -79,9 +78,13 @@ lib_libtunitas_la_SOURCES = \
   \
   obj/src/tunitas/time/namespace.cpp \
   obj/src/tunitas/time/Clock.cpp \
+  obj/src/tunitas/time/duration.cpp \
+  obj/src/tunitas/time/duration_cast.cpp \
   obj/src/tunitas/time/Duration.cpp \
+  obj/src/tunitas/time/literals.cpp \
   obj/src/tunitas/time/Point.cpp \
   obj/src/tunitas/time/put.cpp \
+  obj/src/tunitas/time/ratio.cpp \
   \
   obj/src/tunitas/urlsafe/namespace.cpp \
   obj/src/tunitas/urlsafe/detail.cpp \
