--- a/tests/unit/Makefrag.am
+++ b/tests/unit/Makefrag.am
@@ -7,6 +7,7 @@ tests_unit_TESTS = \
  \
   tests/unit/app.test \
   tests/unit/base64.test \
+  tests/unit/exception.test \
   tests/unit/outcome.test \
   tests/unit/required.test \
   tests/unit/server.test \
