first rationalization on the exception system
The package version rachets to 1.9.0 in preparation for the merge
tester final-linking uses AND_CHECK_LD_FLAGS instead of assuming AM_LDFLAGS (which is never supplied by automake)
build check programs -no-install
separation fo the Aspect from the features; though they are still in namespace aspect
The final class needs an multiple inheritance list consisting of an Aspect, zero or more features and an Exception
Deprecation warnings for prior naming conventions are made explicit and warned with [[deprecated("...")]]

--- a/Makefile.am
+++ b/Makefile.am
@@ -136,10 +136,10 @@ TESTS = \
 
 # The Makefile_*SET variables are assembled by .../toolflags.mk
 # via @temerarious_flagship_datadir@/am/build.am and its constituents.
-# [[REMOVEWHEN]] temerarious-flagship supplies this, e.g. 1.1.2
+# [[REMOVEWHEN]] temerarious-flagship supplies this, e.g. temerarious-flagship >= 1.1.2
 include $(if $(filter 1,$(hypogeal_twilight_toolflags_mk_included)), /dev/null, @hypogeal_twilight_datadir@/mk/toolflags.mk)
 
-# configure.ac:  TF_ENABLE_GCC
+# configure.ac: TF_ENABLE_GCC enables these @-variables
 Makefile_COMPILER_CPPFLAGS_SET =                @CPPFLAGS_gcc@
 Makefile_COMPILER_CFLAGS_SET   = @CFLAGS_gdb@   @CFLAGS_gcc@
 Makefile_COMPILER_CXXFLAGS_SET = @CXXFLAGS_gdb@ @CXXFLAGS_gcc@ -Wno-attributes
@@ -157,10 +157,11 @@ Makefile_PACKAGE_CFLAGS_SET   =
 Makefile_PACKAGE_CXXLAGS_SET  = 
 Makefile_PACKAGE_LDFLAGS_SET  = 
 
-Makefile_CHECK_CPPFLAGS_SET = 
-Makefile_CHECK_CFLAGS_SET   = 
-Makefile_CHECK_CXXLAGS_SET  = 
-Makefile_CHECK_LDFLAGS_SET  = -no-install
+Makefile_CHECK_CPPFLAGS_SET    = @CPPFLAGS_cppunit@ @CPPFLAGS_no_install@
+Makefile_CHECK_CFLAGS_SET      =   @CFLAGS_cppunit@   @CFLAGS_no_install@
+Makefile_CHECK_CXXFLAGS_SET    = @CXXFLAGS_cppunit@ @CXXFLAGS_no_install@
+Makefile_CHECK_LDFLAGS_SET     =  @LDFLAGS_cppunit@  @LDFLAGS_no_install@
+
 
 AM_CPPFLAGS = $(PACKAGE_CPPFLAGS_SET)
 AM_CXXFLAGS = $(PACKAGE_CXXFLAGS_SET)
