--- a/src/tunitas/Makefrag.am
+++ b/src/tunitas/Makefrag.am
@@ -76,8 +76,11 @@ lib_libtunitas_la_SOURCES = \
   \
   obj/src/tunitas/exception/namespace.cpp \
   obj/src/tunitas/exception/Aspect.cpp \
-  obj/src/tunitas/exception/aspect.Messaging.cpp \
-  obj/src/tunitas/exception/aspect.Quitting.cpp \
+  obj/src/tunitas/exception/feature.Messaging.cpp \
+  obj/src/tunitas/exception/feature.Quitting.cpp \
+  obj/src/tunitas/exception/aspect/namespace.cpp \
+  obj/src/tunitas/exception/aspect/Messaging.cpp \
+  obj/src/tunitas/exception/aspect/Quitting.cpp \
   \
   obj/src/tunitas/Outcome.cpp \
   obj/src/tunitas/Success.cpp \
