namespaces tunitas::required, tunitas::app::required, tunitas::server::required
with cascaded namespaces
following namespaces tunitas::exception, tunitas::app::exception, tunitas::server::exception (which are cascaded)
tunitas::required::exception::app::Quitting is grandfathered

--- a/src/tunitas/app/Makefrag.am
+++ b/src/tunitas/app/Makefrag.am
@@ -62,6 +62,9 @@ lib_libtunitas_app_la_SOURCES = \
   obj/src/tunitas/app/options.get_port.cpp \
   obj/src/tunitas/app/options.get_word.cpp \
   \
+  obj/src/tunitas/app/required/namespace.cpp \
+  obj/src/tunitas/app/required/exception.Quitting.cpp \
+  \
   obj/src/tunitas/app/words.cpp \
   obj/src/tunitas/app/words.Filepaths.cpp \
   obj/src/tunitas/app/words.Strings.cpp \
