--- a/src/tests/outcome/Makefrag.am
+++ b/src/tests/outcome/Makefrag.am
@@ -29,10 +29,15 @@ check_bin_outcome_error_code_SOURCES = \
   obj/src/tests/outcome/error_code.cpp \
   $(end)
 
+$(check_bin_outcome_error_condition_SOURCES) \
+$(check_bin_outcome_error_code_SOURCES) \
+$(check_lib_libtests_outcome_la_SOURCES) : obj/src/%.cpp : src/%.xcpp
+	$(TF_V_DIS) $(call TF_DISAGGREGATE_COMPILE, $@)
+	$(TF_V_DONE) test -e $@
 $(scold_cxxdir)/tests/outcome/dependencies.mk:
-	$(TF_V_DC) $(call TF_DISAGGREGATE, $(check_bin_outcome_error_condition_SOURCES))
-	$(TF_V_DC) $(call TF_DISAGGREGATE, $(check_bin_outcome_error_code_SOURCES))
-	$(TF_V_DC) $(call TF_DISAGGREGATE, $(check_lib_libtests_outcome_la_SOURCES))
+	$(TF_V_COM) $(call TF_COMPILE, $(check_bin_outcome_error_condition_SOURCES))
+	$(TF_V_COM) $(call TF_COMPILE, $(check_bin_outcome_error_code_SOURCES))
+	$(TF_V_COM) $(call TF_COMPILE, $(check_lib_libtests_outcome_la_SOURCES))
 	$(TF_V_DONE) test -e $@
 include $(scold_cxxdir)/tests/outcome/dependencies.mk
 clean-dependencies::
