--- a/src/want/Makefrag.am
+++ b/src/want/Makefrag.am
@@ -37,8 +37,11 @@ lib_libwant_la_SOURCES = \
   obj/src/want/sys.posix.setreuid.cpp \
   $(end)
 
+$(lib_libwant_la_SOURCES) : obj/src/%.cpp : src/%.xcpp
+	$(TF_V_DIS) $(call TF_DISAGGREGATE_COMPILE, $@)
+	$(TF_V_DONE) test -e $@
 $(scold_cxxdir)/want/dependencies.mk:
-	$(TF_V_DC) $(call TF_DISAGGREGATE, $(lib_libwant_la_SOURCES))
+	$(TF_V_COM) $(call TF_COMPILE, $(lib_libwant_la_SOURCES))
 	$(TF_V_DONE) test -e $@
 include $(scold_cxxdir)/want/dependencies.mk
 clean-dependencies::
