--- a/src/tunitas/app/Makefrag.am
+++ b/src/tunitas/app/Makefrag.am
@@ -70,8 +70,11 @@ lib_libtunitas_app_la_SOURCES = \
   obj/src/tunitas/app/words.Strings.cpp \
   $(end)
 
+$(lib_libtunitas_app_la_SOURCES) : obj/src/%.cpp : src/%.xcpp
+	$(TF_V_DIS) $(call TF_DISAGGREGATE_COMPILE, $@)
+	$(TF_V_DEP) test -e $@
 $(scold_cxxdir)/tunitas/app/dependencies.mk:
-	$(TF_V_DCDIS) $(call TF_DISAGGREGATE, $(lib_libtunitas_app_la_SOURCES))
+	$(TF_V_COM) $(call TF_COMPILE, $(lib_libtunitas_app_la_SOURCES))
 	$(TF_V_DEP) test -e $@
 include $(scold_cxxdir)/tunitas/app/dependencies.mk
 clean-dependencies::
