--- a/src/tunitas/server/Makefrag.am
+++ b/src/tunitas/server/Makefrag.am
@@ -42,8 +42,11 @@ lib_libtunitas_server_la_SOURCES = \
   obj/src/tunitas/server/required/Resourceful.cpp \
   $(end)
 
+$(lib_libtunitas_server_la_SOURCES) : obj/src/%.cpp : src/%.xcpp
+	$(TF_V_DIS) $(call TF_DISAGGREGATE_COMPILE, $@)
+	$(TF_V_DEP) test -e $@
 $(scold_cxxdir)/tunitas/server/dependencies.mk:
-	$(TF_V_DCDIS) $(call TF_DISAGGREGATE, $(lib_libtunitas_server_la_SOURCES))
+	$(TF_V_COM) $(call TF_COMPILE, $(lib_libtunitas_server_la_SOURCES))
 	$(TF_V_DEP) test -e $@
 include $(scold_cxxdir)/tunitas/server/dependencies.mk
 clean-dependencies::
