use the facilities of temerarious-flagship >= 1.5.0-0.devel modernize the disaggregation with the two-step method and TF_V_COM and siblings remove the #warning mentions by completing the omitted unit tests tunitas::app::required::exception::Quitting no longer comments that it expects inheritance from nonstd::exception::Quitting a hard requirement on onstd-libhttpserver-devel-2:0.9.0-10.1.ipv6+poll+regex+api+tdd (see the "+tdd" particle?)

--- a/src/tests/unit/Makefrag.am
+++ b/src/tests/unit/Makefrag.am
@@ -82,6 +82,9 @@ check_bin_unit_SOURCES = \
   \
   obj/src/tests/unit/server/namespace.cpp \
   obj/src/tests/unit/server/Fixture.cpp \
+  obj/src/tests/unit/server/Fixture.Deleter.cpp \
+  obj/src/tests/unit/server/Fixture.Request.cpp \
+  obj/src/tests/unit/server/Fixture.Resource.cpp \
   obj/src/tests/unit/server/Fixture.exception.Example.cpp \
   obj/src/tests/unit/server/exception/namespace.cpp \
   obj/src/tests/unit/server/exception/Fixture.cpp \
@@ -93,15 +96,22 @@ check_bin_unit_SOURCES = \
   obj/src/tests/unit/time.literals.Fixture.cpp \
   obj/src/tests/unit/time.duration.Fixture.cpp \
   obj/src/tests/unit/time.ratio.Fixture.cpp \
+  \
   obj/src/tests/unit/tunitas.Fixture.cpp \
+  \
   obj/src/tests/unit/urlsafe.Fixture.cpp \
+  \
   obj/src/tests/unit/want.Fixture.cpp \
   obj/src/tests/unit/want.nonstd.Fixture.cpp \
   obj/src/tests/unit/want.sys.Fixture.cpp \
   obj/src/tests/unit/want.sys.posix.Fixture.cpp \
   $(end)
+$(scold_cxxdir)/tests/unit/dependencies.mk: $(check_bin_unit_SOURCES)
+$(check_bin_unit_SOURCES) : obj/src/%.cpp : src/%.xcpp
+	$(TF_V_DIS) $(call TF_XCPP2CPP, $^)
+	$(TF_V_DONE) test -e $@
 $(scold_cxxdir)/tests/unit/dependencies.mk:
-	$(TF_V_DIS) $(call TF_DEPENDENCIES, $(check_bin_unit_SOURCES))
+	$(TF_V_DEP) $(call TF_DEPENDENCIES, $^)
 	$(TF_V_DONE) test -e $@
 include $(scold_cxxdir)/tests/unit/dependencies.mk
 clean-dependencies::
