--- a/src/want/Makefrag.am
+++ b/src/want/Makefrag.am
@@ -36,9 +36,12 @@ lib_libwant_la_SOURCES = \
   obj/src/want/sys.posix.setresuid.cpp \
   obj/src/want/sys.posix.setreuid.cpp \
   $(end)
-
+$(scold_cxxdir)/want/dependencies.mk: $(lib_libwant_la_SOURCES)
+$(lib_libwant_la_SOURCES) : obj/src/%.cpp : src/%.xcpp
+	$(TF_V_DIS) $(call TF_XCPP2CPP, $^)
+	$(TF_V_DONE) test -e $@
 $(scold_cxxdir)/want/dependencies.mk:
-	$(TF_V_DC) $(call TF_DEPENDENCIES, $(lib_libwant_la_SOURCES))
+	$(TF_V_DEP) $(call TF_DEPENDENCIES, $^)
 	$(TF_V_DONE) test -e $@
 include $(scold_cxxdir)/want/dependencies.mk
 clean-dependencies::
