--- a/src/tests/base64/Makefrag.am
+++ b/src/tests/base64/Makefrag.am
@@ -34,9 +34,12 @@ src_tests_base64_SOURCES_SET = \
   $(check_bin_base64_decode_SOURCES) \
   $(check_bin_base64_encode_SOURCES) \
   $(end)
-$(info DEBUG $(src_tests_base64_SOURCES_SET))
+$(scold_cxxdir)/tests/base64/dependencies.mk: $(src_tests_base64_SOURCES_SET)
+$(src_tests_base64_SOURCES_SET) : obj/src/%.cpp : src/%.xcpp
+	$(TF_V_DIS) $(call TF_XCPP2CPP, $^)
+	$(TF_V_DONE) test -e $@
 $(scold_cxxdir)/tests/base64/dependencies.mk:
-	$(TF_V_DC) $(call TF_DEPENDENCIES, $(src_tests_base64_SOURCES_SET))
+	$(TF_V_DEP) $(call TF_DEPENDENCIES, $^)
 	$(TF_V_DONE) test -e $@
 include $(scold_cxxdir)/tests/base64/dependencies.mk
 clean-dependencies::
