--- a/src/tests/outcome/Makefrag.am
+++ b/src/tests/outcome/Makefrag.am
@@ -29,10 +29,17 @@ check_bin_outcome_error_code_SOURCES = \
   obj/src/tests/outcome/error_code.cpp \
   $(end)
 
+src_tests_outcome_SOURCES_SET = \
+  $(check_bin_outcome_error_condition_SOURCES) \
+  $(check_bin_outcome_error_code_SOURCES) \
+  $(check_lib_libtests_outcome_la_SOURCES) \
+  $(end)
+$(scold_cxxdir)/tests/outcome/dependencies.mk: $(src_tests_outcome_SOURCES_SET)
+$(src_tests_outcome_SOURCES_SET) : obj/src/%.cpp : src/%.xcpp
+	$(TF_V_DIS) $(call TF_XCPP2CPP, $^)
+	$(TF_V_DONE) test -e $@
 $(scold_cxxdir)/tests/outcome/dependencies.mk:
-	$(TF_V_DC) $(call TF_DEPENDENCIES, $(check_bin_outcome_error_condition_SOURCES))
-	$(TF_V_DC) $(call TF_DEPENDENCIES, $(check_bin_outcome_error_code_SOURCES))
-	$(TF_V_DC) $(call TF_DEPENDENCIES, $(check_lib_libtests_outcome_la_SOURCES))
+	$(TF_V_DEP) $(call TF_DEPENDENCIES, $^)
 	$(TF_V_DONE) test -e $@
 include $(scold_cxxdir)/tests/outcome/dependencies.mk
 clean-dependencies::
