--- a/src/tests/urlsafe/Makefrag.am
+++ b/src/tests/urlsafe/Makefrag.am
@@ -29,10 +29,17 @@ check_bin_urlsafe_encode_SOURCES = \
   obj/src/tests/urlsafe/encode.cpp \
   $(end)
 
+src_tests_urlsafe_SOURCES_SET = \
+  $(check_bin_urlsafe_decode_SOURCES) \
+  $(check_bin_urlsafe_encode_SOURCES) \
+  $(check_lib_libtests_urlsafe_la_SOURCES) \
+  $(end)
+$(scold_cxxdir)/tests/urlsafe/dependencies.mk: $(src_tests_urlsafe_SOURCES_SET)
+$(src_tests_urlsafe_SOURCES_SET) : obj/src/%.cpp : src/%.xcpp
+	$(TF_V_DIS) $(call TF_XCPP2CPP, $^)
+	$(TF_V_DONE) test -e $@
 $(scold_cxxdir)/tests/urlsafe/dependencies.mk:
-	$(TF_V_DC) $(call TF_DEPENDENCIES, $(check_bin_urlsafe_decode_SOURCES))
-	$(TF_V_DC) $(call TF_DEPENDENCIES, $(check_bin_urlsafe_encode_SOURCES))
-	$(TF_V_DC) $(call TF_DEPENDENCIES, $(check_lib_libtests_urlsafe_la_SOURCES))
+	$(TF_V_DEP) $(call TF_DEPENDENCIES, $^)
 	$(TF_V_DONE) test -e $@
 include $(scold_cxxdir)/tests/urlsafe/dependencies.mk
 clean-dependencies::
