--- a/src/tunitas/app/Makefrag.am
+++ b/src/tunitas/app/Makefrag.am
@@ -70,9 +70,13 @@ lib_libtunitas_app_la_SOURCES = \
   obj/src/tunitas/app/words.Strings.cpp \
   $(end)
 
+$(scold_cxxdir)/tunitas/app/dependencies.mk: $(lib_libtunitas_app_la_SOURCES)
+$(lib_libtunitas_app_la_SOURCES) : obj/src/%.cpp : src/%.xcpp
+	$(TF_V_DIS) $(call TF_XCPP2CPP, $^)
+	$(TF_V_DONE) test -e $@
 $(scold_cxxdir)/tunitas/app/dependencies.mk:
-	$(TF_V_DCDIS) $(call TF_DEPENDENCIES, $(lib_libtunitas_app_la_SOURCES))
-	$(TF_V_DEP) test -e $@
+	$(TF_V_DEP) $(call TF_DEPENDENCIES, $^)
+	$(TF_V_DONE) test -e $@
 include $(scold_cxxdir)/tunitas/app/dependencies.mk
 clean-dependencies::
 	rm -f $(scold_cxxdir)/tunitas/app/dependencies.mk
