--- a/src/tunitas/app/Makefrag.am
+++ b/src/tunitas/app/Makefrag.am
@@ -22,7 +22,7 @@
 #       <= AGE   if no interface change, but any other (source code) change
 #
 lib_libtunitas_app_la_CURRENT = 2
-lib_libtunitas_app_la_REVISION = 0
+lib_libtunitas_app_la_REVISION = 1
 lib_libtunitas_app_la_AGE = 0
 lib_libtunitas_app_la_CRA = $(lib_libtunitas_app_la_CURRENT):$(lib_libtunitas_app_la_REVISION):$(lib_libtunitas_app_la_AGE)
 
@@ -42,11 +42,10 @@ lib_libtunitas_app_la_SOURCES = \
   obj/src/tunitas/app/exception/feature.Quitting.cpp \
   obj/src/tunitas/app/exception/feature.Usage.cpp \
   obj/src/tunitas/app/exception/feature.Version.cpp \
-  obj/src/tunitas/app/exception/aspect/namespace.cpp \
-  obj/src/tunitas/app/exception/aspect/Messaging.cpp \
-  obj/src/tunitas/app/exception/aspect/Quitting.cpp \
-  obj/src/tunitas/app/exception/aspect/Usage.cpp \
-  obj/src/tunitas/app/exception/aspect/Version.cpp \
+  obj/src/tunitas/app/exception/aspect.Messaging.cpp \
+  obj/src/tunitas/app/exception/aspect.Quitting.cpp \
+  obj/src/tunitas/app/exception/aspect.Usage.cpp \
+  obj/src/tunitas/app/exception/aspect.Version.cpp \
   \
   obj/src/tunitas/app/exception/Generic.cpp \
   obj/src/tunitas/app/exception/Messaging.cpp \
