more LICENSE badging for Verizon Media in 2020

--- a/configure.ac
+++ b/configure.ac
@@ -1,5 +1,5 @@
 dnl This is a GNU -*- autoconf -*- specification that is processed by Autoconf.
-dnl Copyright 2019, Oath Inc.; Copyright 2020, Verizon Media
+dnl Copyright 2018, 2019, Oath Inc.; Copyright 2020, Verizon Media
 dnl Licensed under the terms of the Apache-2.0 license.
 dnl For terms, see the LICENSE file at https://github.com/yahoo/tunitas-basics/blob/master/LICENSE
 dnl For terms, see the LICENSE file at https://git.tunitas.technology/all/components/basics/tree/LICENSE
