--- a/tests/outcome/error_code/Makefrag.am
+++ b/tests/outcome/error_code/Makefrag.am
@@ -1,3 +1,9 @@
+# This is a -*- Makefile -*- which is processed by automake and included into the top-level Makefile.am
+# Copyright 2018, 2019, Oath Inc.; Copyright 2020, Verizon Media
+# Licensed under the terms of the Apache-2.0 license.
+# For terms, see the LICENSE file at https://github.com/yahoo/tunitas-basics/blob/master/LICENSE
+# For terms, see the LICENSE file at https://git.tunitas.technology/all/components/basics/tree/LICENSE
+#
 tests_outcome_error_code_XFAIL_TESTS = $(none)
 tests_outcome_error_code_XPASS_TESTS = $(none)
 tests_outcome_error_code_TESTS = \
