--- a/src/tunitas/Makefrag.am
+++ b/src/tunitas/Makefrag.am
@@ -24,7 +24,7 @@
 #
 lib_libtunitas_la_CURRENT = 15
 lib_libtunitas_la_REVISION = 0
-glib_libtunitas_la_AGE = 4
+lib_libtunitas_la_AGE = 4
 lib_libtunitas_la_CRA = $(lib_libtunitas_la_CURRENT):$(lib_libtunitas_la_REVISION):$(lib_libtunitas_la_AGE)
 
 lib_libtunitas_la = lib/libtunitas.la
