tunitas::app::exits presents the system error codes as a convenience subdirectory for tunitas.app.options
declare module sys.o as .PHONY so that make won't build it (failing)

--- a/src/tests/unit/Makefrag.am
+++ b/src/tests/unit/Makefrag.am
@@ -75,6 +75,8 @@ check_bin_unit_SOURCES = \
   obj/src/tests/unit/exception/my.Message.cpp \
   obj/src/tests/unit/exception/compatibility.cpp \
   \
+  obj/src/tests/unit/exits.Fixture.cpp \
+  \
   obj/src/tests/unit/outcome.Fixture.cpp \
   obj/src/tests/unit/outcome.Fixture.Uncopyable.cpp \
   obj/src/tests/unit/outcome.Usage.cpp \
