--- a/src/tunitas/server/Makefrag.am
+++ b/src/tunitas/server/Makefrag.am
@@ -38,7 +38,7 @@ lib_libtunitas_server_la_SOURCES = \
   $(end)
 
 $(scold_cxxdir)/tunitas/server/dependencies.mk:
-	$(TF_V_DCDIS) $(call TF_DISAGGREGATE, $(lib_libtunitas_server_la_SOURCES))
+	$(TF_V_DCDIS) $(call TF_DEPENDENCIES, $(lib_libtunitas_server_la_SOURCES))
 	$(TF_V_DEP) test -e $@
 include $(scold_cxxdir)/tunitas/server/dependencies.mk
 clean-dependencies::
