--- a/src/tests/outcome/Makefrag.am
+++ b/src/tests/outcome/Makefrag.am
@@ -30,9 +30,9 @@ check_bin_outcome_error_code_SOURCES = \
   $(end)
 
 $(scold_cxxdir)/tests/outcome/dependencies.mk:
-	$(TF_V_DC) $(call TF_DISAGGREGATE, $(check_bin_outcome_error_condition_SOURCES))
-	$(TF_V_DC) $(call TF_DISAGGREGATE, $(check_bin_outcome_error_code_SOURCES))
-	$(TF_V_DC) $(call TF_DISAGGREGATE, $(check_lib_libtests_outcome_la_SOURCES))
+	$(TF_V_DC) $(call TF_DEPENDENCIES, $(check_bin_outcome_error_condition_SOURCES))
+	$(TF_V_DC) $(call TF_DEPENDENCIES, $(check_bin_outcome_error_code_SOURCES))
+	$(TF_V_DC) $(call TF_DEPENDENCIES, $(check_lib_libtests_outcome_la_SOURCES))
 	$(TF_V_DONE) test -e $@
 include $(scold_cxxdir)/tests/outcome/dependencies.mk
 clean-dependencies::
