--- a/src/tests/unit/Makefrag.am
+++ b/src/tests/unit/Makefrag.am
@@ -79,7 +79,7 @@ check_bin_unit_SOURCES = \
   obj/src/tests/unit/want.sys.posix.Fixture.cpp \
   $(end)
 $(scold_cxxdir)/tests/unit/dependencies.mk:
-	$(TF_V_DIS) $(call TF_DISAGGREGATE, $(check_bin_unit_SOURCES))
+	$(TF_V_DIS) $(call TF_DEPENDENCIES, $(check_bin_unit_SOURCES))
 	$(TF_V_DONE) test -e $@
 include $(scold_cxxdir)/tests/unit/dependencies.mk
 clean-dependencies::
