--- a/src/tests/urlsafe/Makefrag.am
+++ b/src/tests/urlsafe/Makefrag.am
@@ -30,9 +30,9 @@ check_bin_urlsafe_encode_SOURCES = \
   $(end)
 
 $(scold_cxxdir)/tests/urlsafe/dependencies.mk:
-	$(TF_V_DC) $(call TF_DISAGGREGATE, $(check_bin_urlsafe_decode_SOURCES))
-	$(TF_V_DC) $(call TF_DISAGGREGATE, $(check_bin_urlsafe_encode_SOURCES))
-	$(TF_V_DC) $(call TF_DISAGGREGATE, $(check_lib_libtests_urlsafe_la_SOURCES))
+	$(TF_V_DC) $(call TF_DEPENDENCIES, $(check_bin_urlsafe_decode_SOURCES))
+	$(TF_V_DC) $(call TF_DEPENDENCIES, $(check_bin_urlsafe_encode_SOURCES))
+	$(TF_V_DC) $(call TF_DEPENDENCIES, $(check_lib_libtests_urlsafe_la_SOURCES))
 	$(TF_V_DONE) test -e $@
 include $(scold_cxxdir)/tests/urlsafe/dependencies.mk
 clean-dependencies::
