--- a/src/tunitas/Makefrag.am
+++ b/src/tunitas/Makefrag.am
@@ -97,7 +97,7 @@ lib_libtunitas_la_SOURCES = \
   $(end)
 
 $(scold_cxxdir)/tunitas/dependencies.mk:
-	$(TF_V_DCDIS) $(call TF_DISAGGREGATE, $(lib_libtunitas_la_SOURCES))
+	$(TF_V_DCDIS) $(call TF_DEPENDENCIES, $(lib_libtunitas_la_SOURCES))
 	$(TF_V_DEP) test -e $@
 include $(scold_cxxdir)/tunitas/dependencies.mk
 clean-dependencies::
