--- a/src/tunitas/app/Makefrag.am
+++ b/src/tunitas/app/Makefrag.am
@@ -64,7 +64,7 @@ lib_libtunitas_app_la_SOURCES = \
   $(end)
 
 $(scold_cxxdir)/tunitas/app/dependencies.mk:
-	$(TF_V_DCDIS) $(call TF_DISAGGREGATE, $(lib_libtunitas_app_la_SOURCES))
+	$(TF_V_DCDIS) $(call TF_DEPENDENCIES, $(lib_libtunitas_app_la_SOURCES))
 	$(TF_V_DEP) test -e $@
 include $(scold_cxxdir)/tunitas/app/dependencies.mk
 clean-dependencies::
