--- a/src/want/Makefrag.am
+++ b/src/want/Makefrag.am
@@ -38,7 +38,7 @@ lib_libwant_la_SOURCES = \
   $(end)
 
 $(scold_cxxdir)/want/dependencies.mk:
-	$(TF_V_DC) $(call TF_DISAGGREGATE, $(lib_libwant_la_SOURCES))
+	$(TF_V_DC) $(call TF_DEPENDENCIES, $(lib_libwant_la_SOURCES))
 	$(TF_V_DONE) test -e $@
 include $(scold_cxxdir)/want/dependencies.mk
 clean-dependencies::
