Removed mention of module-httpserver & nonstd-httpserver (namespace httpserver), replaced with microhttpd++ (namespace microhttpd)
builds & (unit-)tests.
namespace tunitas::string with the usual denizens
namespace tunitas::tuple with the usual denizens
tunitas::Optional & Pair to obey the namespace rules

--- a/Makefile.am
+++ b/Makefile.am
@@ -20,13 +20,14 @@ $(if $(scold_cxxdir),$(__ok),$(error @temerarious_flagship_datadir@/am/build.am 
 # there are no submodules (now).
 
 DEVELOPMENT_AREAS = \
-  $(module_httpserver_prefix) \
+  $(module_ip_prefix) \
   $(module_nonstd_prefix) \
   $(module_options_prefix) \
   $(module_posix_prefix) \
   $(module_std_prefix) \
   $(module_string_prefix) \
   $(module_sys_prefix) \
+  $(microhttpd___prefix) \
   $(end)
 TESTING_AREAS = \
   $(module_cppunit_prefix) \
@@ -35,22 +36,12 @@ TESTING_AREAS = \
 INSTALLATION_AREAS = \
   $(nonstd_cppunit_prefix) \
   $(nonstd_half_prefix) \
-  $(nonstd_libhttpserver_prefix) \
   $(nonstd_gcc_prefix) \
   $(std_scold_prefix) \
   $(std_tunitas_prefix) \
   $(end)
 
 default: all
-
-# install rules from @temerarious_flagship_datadir@/am/install.am
-module_BB_SOURCE_SET = \
-  $(lib_libtunitas_app_la_SOURCES) \
-  $(lib_libtunitas_server_la_SOURCES) \
-  $(lib_libtunitas_la_SOURCES) \
- $(lib_libwant_la_SOURCES) \
-  $(end)
-$(if $(DEBUGGING_CONDITION),$(info DEBUG module_SOURCE_SET=$(module_BB_SOURCE_SET)))
 
 .PHONY: clean-local mostlyclean-local distclean-local
 clean-local mostlyclean-local distclean-local::
@@ -81,6 +72,15 @@ include src/tests/unit/Makefrag.am
 include src/tests/base64/Makefrag.am
 include src/tests/outcome/Makefrag.am
 include src/tests/urlsafe/Makefrag.am
+
+# only AFTER the $(...*_MODULES) are defined
+INSTALL_MODULES = \
+  $(lib_libtunitas_app_la_MODULES) \
+  $(lib_libtunitas_server_la_MODULES) \
+  $(lib_libtunitas_la_MODULES) \
+  $(lib_libwant_la_MODULES) \
+  $(end)
+#include $(temerarious_flagship_datadir)/.../mk/install.mk as necessary
 
 $(lib_libtunitas_app_la) : $(lib_libtunitas_la) 
 $(lib_libtunitas_server_la) : $(lib_libtunitas_la) 
@@ -163,11 +163,11 @@ Makefile_COMPILER_CFLAGS_SET   = @CFLAGS_gdb@   @CFLAGS_gcc@
 Makefile_COMPILER_CXXFLAGS_SET = @CXXFLAGS_gdb@ @CXXFLAGS_gcc@ -Wno-attributes
 Makefile_COMPILER_LDFLAGS_SET  = @LDFLAGS_gdb@  @LDFLAGS_gcc@  @libstd_filesystem@
 
-# configure.ac: TF_WITH_NONSTD([nonstd-libhttpserver])
-Makefile_nonstd_CPPFLAGS_SET = @nonstd_libhttpserver_CPPFLAGS@
-Makefile_nonstd_CFLAGS_SET   = @nonstd_libhttpserver_CFLAGS@
-Makefile_nonstd_CXXLAGS_SET  = @nonstd_libhttpserver_CXXFLAGS@
-Makefile_nonstd_LDFLAGS_SET  = @nonstd_libhttpserver_LDFLAGS@
+# configure.ac: TF_WITH_NONSTD([something-something])
+Makefile_nonstd_CPPFLAGS_SET = 
+Makefile_nonstd_CFLAGS_SET   = 
+Makefile_nonstd_CXXLAGS_SET  = 
+Makefile_nonstd_LDFLAGS_SET  = 
 
 # extras not otherwise covered by the TF_WITH_MODULE([...]) declarations
 Makefile_PACKAGE_CPPFLAGS_SET = 
