--- a/src/tests/unit/Makefrag.am
+++ b/src/tests/unit/Makefrag.am
@@ -85,8 +85,7 @@ check_bin_unit_SOURCES = \
   \
   obj/src/tests/unit/server/namespace.cpp \
   obj/src/tests/unit/server/Fixture.cpp \
-  obj/src/tests/unit/server/Fixture.Deleter.cpp \
-  obj/src/tests/unit/server/Fixture.Request.cpp \
+  obj/src/tests/unit/server/Fixture.Anchored.Request.cpp \
   obj/src/tests/unit/server/Fixture.Resource.cpp \
   obj/src/tests/unit/server/Fixture.exception.Example.cpp \
   obj/src/tests/unit/server/exception/namespace.cpp \
