--- a/src/tunitas/Makefrag.am
+++ b/src/tunitas/Makefrag.am
@@ -22,17 +22,21 @@
 #       <= 0     if any interfaces were changed
 #       <= AGE   if no interface change, but any other (source code) change
 #
-lib_libtunitas_la_CURRENT = 15
+lib_libtunitas_la_CURRENT = 17
 lib_libtunitas_la_REVISION = 0
-lib_libtunitas_la_AGE = 4
+lib_libtunitas_la_AGE = 0
 lib_libtunitas_la_CRA = $(lib_libtunitas_la_CURRENT):$(lib_libtunitas_la_REVISION):$(lib_libtunitas_la_AGE)
 
 lib_libtunitas_la = lib/libtunitas.la
 lib_libtunitas_la_LDFLAGS = $(PACKAGE_LDFLAGS_SET) -version-info $(lib_libtunitas_la_CRA)
-lib_libtunitas_la_LIBADD = -loptions-module -lsys-module $(lib_libwant_la)
+lib_libtunitas_la_LIBADD = -lsys-module $(lib_libwant_la)
 lib_libtunitas_la_MODULES = $(call TF_SOURCEStoMODULES, $(lib_libtunitas_la_SOURCES))
 lib_libtunitas_la_SOURCES = \
   obj/src/tunitas/namespace.cpp \
+  obj/src/tunitas/literals.cpp \
+  \
+  obj/src/tunitas/Optional.cpp \
+  obj/src/tunitas/Pair.cpp \
   \
   obj/src/tunitas/required/namespace.cpp \
   obj/src/tunitas/required/Integral.cpp \
@@ -92,15 +96,9 @@ lib_libtunitas_la_SOURCES = \
   obj/src/tunitas/outcome/Visitor.cpp \
   obj/src/tunitas/outcome/visit.cpp \
   \
-  obj/src/tunitas/time/namespace.cpp \
-  obj/src/tunitas/time/Clock.cpp \
-  obj/src/tunitas/time/duration.cpp \
-  obj/src/tunitas/time/duration_cast.cpp \
-  obj/src/tunitas/time/Duration.cpp \
-  obj/src/tunitas/time/literals.cpp \
-  obj/src/tunitas/time/Point.cpp \
-  obj/src/tunitas/time/put.cpp \
-  obj/src/tunitas/time/ratio.cpp \
+  $(obj_src_tunitas_string_SUBSOURCES) \
+  $(obj_src_tunitas_time_SUBSOURCES) \
+  $(obj_src_tunitas_tuple_SUBSOURCES) \
   \
   obj/src/tunitas/urlsafe/namespace.cpp \
   obj/src/tunitas/urlsafe/detail.cpp \
@@ -110,6 +108,10 @@ lib_libtunitas_la_SOURCES = \
   obj/src/tunitas/urlsafe/decoder.Invalid.cpp \
   obj/src/tunitas/urlsafe/encode.cpp \
   $(end)
+#
+include src/tunitas/string/Makefrag.am
+include src/tunitas/time/Makefrag.am
+include src/tunitas/tuple/Makefrag.am
 $(scold_cxxdir)/tunitas/dependencies.mk: $(lib_libtunitas_la_SOURCES)
 $(lib_libtunitas_la_SOURCES) : obj/src/%.cpp : src/%.xcpp
 	$(TF_V_DIS) $(call TF_XCPP2CPP, $^)
