--- a/src/tunitas/application/options/Makefrag.am
+++ b/src/tunitas/application/options/Makefrag.am
@@ -7,7 +7,11 @@
 obj_src_tunitas_application_options_SUBSOURCES = \
   obj/src/tunitas/application/options/namespace.cpp \
   obj/src/tunitas/application/options/Args.cpp \
+  obj/src/tunitas/application/options/Argument.cpp \
+  obj/src/tunitas/application/options/Arguments.cpp \
   obj/src/tunitas/application/options/c.Args.cpp \
+  obj/src/tunitas/application/options/c.Argv.cpp \
+  obj/src/tunitas/application/options/Program.cpp \
   obj/src/tunitas/application/options/Specification.cpp \
   obj/src/tunitas/application/options/get_filepath.cpp \
   obj/src/tunitas/application/options/get_identifier.cpp \
